@@ -1,3 +1,8 @@
+2011-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/49698
+	* gfortran.dg/pr49698.f90: New test.
+
 2011-07-10  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/49690
